# light-schedule

./: .env.dist  .gitignore  LICENSE  main.py  pyproject.toml  readme.md
app/: commands.py  constans.py  routers.py  states.py  text.py
app/business/: alert_service.py  github_schedule_monitor.py  schedule_monitor.py  schedule_watcher.py
app/filters/: admin.py  user.py
app/handlers/: __init__.py
app/handlers/admin/: __init__.py  admin.py  ban.py  logs.py  stats.py
app/handlers/common/: __init__.py  help.py  invite.py  lang.py  start.py
app/handlers/user/: __init__.py  alerts.py  change_group.py  command.py  shedule.py
app/keyboards/default/: base.py  kb_generator.py
app/keyboards/inline/: lang.py
app/middlewares/: __init__.py  admin.py  common.py  throttling.py  user.py
data/: config.py
data/locales/: bot.pot
data/locales/en/LC_MESSAGES/: bot.po
data/locales/ru/LC_MESSAGES/: bot.mo  bot.po
data/locales/uk/LC_MESSAGES/: bot.mo  bot.po
database/migrations/: env.py
database/models/: __init__.py  shedule.py  user.py
database/services/: user.py
utils/: github_schedule.py  light_schedule.py  logging.py  test_script.py
