[project]
name = "aiogram-sqlalchemy-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.18.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.1",
    "apscheduler>=3.11.1",
    "asyncpg>=0.30.0",
    "babel>=2.17.0",
    "bs4>=0.0.2",
    "environs>=14.1.1",
    "loguru>=0.7.3",
    "redis>=5.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.38",
]
